--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -12,8 +12,8 @@
         <!-- Or if you don't want it to collapse on smaller screens: replace collapse navbar-collapse  with just navbar-default. -->
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li><a href="#">Recipes</a></li>
-                <li><a href="#">Shopping List</a></li>
+                <li><a href="#" (click)="onSelect('recipe')">Recipes</a></li>
+                <li><a href="#" (click)="onSelect('shopping-list')">Shopping List</a></li>
             </ul>
             
             <!-- Dropdown Menu added to the Right -->
