Directives: Building and using a custom Dropdown Directive

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -18,7 +18,7 @@
             
             <!-- Dropdown Menu added to the Right -->
             <ul class="nav navbar-nav navbar-right">
-                <li class="dropdown">
+                <li class="dropdown" appDropdown>
                     <!-- caret adds the dropdown arrow -->
                     <a href="#" class="dropdown-toggle" role="button">Manage<span class="caret"></span></a>
                 <ul class="dropdown-menu">
