Removed custom events which we used to display the clicked recipe item's details with the Event Emitted in the RecipeService to which we Subscribed in the recipes component

--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -11,7 +11,9 @@
       <app-recipe-item
        *ngFor="let recipeEl of recipes"
        [recipe]="recipeEl"
-       (recipeSelected)="onRecipeSelected(recipeEl)"
       ></app-recipe-item>
     </div>
 </div>
+
+<!-- removed from the app-recipe-item as we are using the RecipeService to listen to event: 
+       (recipeSelected)="onRecipeSelected(recipeEl)" -->
