--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -1,8 +1,11 @@
 <div class="row">
+
+        <!-- Removed from app-recipe-list as we are using the RecipeService to listen to event
+            (recipeWasSelected)="selectedRecipe = $event" -->
     <div class="col-md-5">
-        <app-recipe-list
-            (recipeWasSelected)="selectedRecipe = $event"></app-recipe-list>
+        <app-recipe-list></app-recipe-list>
     </div>
+
     <div class="col-md-7">
         <app-recipe-detail
             *ngIf="selectedRecipe; else infoText"
