--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,10 +1,11 @@
 <div class="row">
     <div class="col-xs-10">
         <app-shopping-edit></app-shopping-edit>
-        <!-- Removed: (ingredientAdded)="onIngredientAdded($event)" -->
-        
+               
         <hr>
         <ul class="list-group">
+
+            <!-- List of Ingredients: click listener added if we click to Edit Item -->
             <a 
             class="list-group-item" 
             style="cursor:pointer"
