--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -1,1 +1,116 @@
-<p>recipe-edit works!</p>
+<div class="row">
+    <div class="col-xs-12">
+        <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
+
+            <!-- Save & Cancel Buttons -->
+            <div class="row">
+                <div class="col-xs-12">
+                    <button type="submit" class="btn btn-success" [disabled]="!recipeForm.valid">Save</button>
+                    <button type="submit" class="btn btn-danger" (click)="onCancel()">Cancel</button>
+                </div>
+            </div>
+
+            <!-- Name -->
+            <div class="row">
+                <div class="col-xs-12">
+                    <div class="form-group">
+                        <label for="name">Name</label>
+
+                        <input
+                           type="text" 
+                           id="name"
+                           class="form-control"
+                           formControlName="name" 
+                        >
+                    </div>
+                </div>
+            </div>
+
+            <!-- Image Path (URL) -->
+            <div class="row">
+                <div class="col-xs-12">
+                    <div class="form-group">
+                        <label for="imagePath">Image URL</label>
+
+                        <input
+                           type="text" 
+                           id="imagePath"
+                           class="form-control"
+                           formControlName="imagePath"
+                           #imagePath
+                        >
+                    </div>           
+                </div>
+            </div>
+
+            <!-- Image -->
+            <div class="row">
+                <div class="col-xs-12">
+                    <img [src]="imagePath.value" class="img-responsive">
+                </div>
+            </div>
+
+            <!-- Description -->
+            <div class="row">
+                <div class="col-xs-12">
+                    <div class="form-group">
+                        <label for="description">Description</label>
+
+                        <textarea
+                           type="text" 
+                           id="description"
+                           class="form-control"
+                           rows="6"
+                           formControlName="description"
+                        >
+                        </textarea>
+                    </div>           
+                </div>
+            </div>
+
+            <!-- Array of Ingredients -->
+            <div class="row">
+                <!-- Bind the form array to our ingredients Form Array -->
+                <div class="col-xs-12" formArrayName="ingredients">
+
+                    <!-- Each control is a row - loop through the controls from our ingredients Form Array -->
+                    <div
+                     class="row ingredients"
+                     *ngFor="let ingredientCtrl of controls; let i = index"
+                     [formGroupName]="i"
+                    >
+                        <!-- Inputs - populated with the name & amount form control names from the ingredients form array  -->
+                        <div class="col-xs-8">
+                            <input
+                                type="text" 
+                                class="form-control"
+                                formControlName = "name"
+                            >  
+                        </div>
+
+                        <div class="col-xs-2">
+                            <input
+                                type="number" 
+                                class="form-control"
+                                formControlName="amount"
+                            >  
+                        </div>
+
+                        <div class="col-xs-2">
+                            <button type="button" class="btn btn-danger" (click)="onDeleteIngredient(i)">X</button>
+                        </div>
+                    </div>   
+
+                    <!-- Add Ingredient button -->
+                    <div class="row">
+                        <div class="col-xs-12">
+                            <button class="btn btn-success add-ingredient" (click)="onAddIngredient()" type="button">Add Ingredient</button>
+                        </div>
+                    </div> 
+
+                </div>
+            </div>
+        </form>
+
+    </div>
+</div>
